[package]
name = "immuxsys"
version = "2.0.0"
authors = ["Immux Network Technology Company, Limited"]
edition = "2018"

[dependencies]
# This is a temporary dependency, we currently use clap as a command line tools mainly for testing purpose for now.
clap = "2.33.0"
# This is a temporary dependency, we currently use this lib for bench purpose.
tiny_http = "0.6"

[dev-dependencies]

[[test]]
name = "test_kv"
path = "src/storage/tests/test_kv.rs"

