[package]
name = "immuxsys"
version = "2.0.0"
authors = ["Immux Network Technology Company, Limited"]
edition = "2018"

[dependencies]
# This is a temporary dependency, we currently use clap as a command line tools mainly for testing purpose for now.
clap = "2.33.0"
# These are temporary dependencies, we currently use this lib for bench purpose.
tiny_http = "0.6"
url = "1.7"

[dev-dependencies]
immuxsys_client = { path = "./client" }
immuxsys_dev_utils = { path = "./dev_utils" }
serde = { version = "1.0", features = ["derive"] }

[[test]]
name = "test_kv"
path = "src/storage/tests/test_kv.rs"

[[bench]]
name = "covid"
harness = false
path = "benches/covid.rs"

[[bench]]
name = "berka99"
harness = false
path = "benches/berka99.rs"

[[bench]]
name = "anzsic06"
harness = false
path = "benches/anzsic06.rs"

[[bench]]
name = "census90"
harness = false
path = "benches/census90.rs"

[workspace]
members = [
    "./client",
    "./dev_utils",
]
